# digipics

./: .gitignore  README.md  pyproject.toml  setup.py
digipics/: NextCloud.py  digiimport.py  digiphone.py  pyproject.toml
