[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "digipics"
version = "0.0.1"
authors = [
  { name="Stephan Skrodzki", email="skrodzki@stevekist.de" },
]
description = "Organize your digital pictures"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
]
